--- a/stories/index.html
+++ b/stories/index.html
@@ -98,6 +98,7 @@
 <li class="toc"><a href="#tagalog">Tagalog [Tagalog]</a></li><br>
 <li class="toc"><a href="#tunisian-arabic">Tunisian Arabic [Tounsi]</a></li><br>
 <li class="toc"><a href="#turkish">Turkish [Türkçe]</a></li><br>
+<li class="toc"><a href="#ukrainian">Ukrainian [Українська]</a></li><br>
 <li class="toc"><a href="#vietnamese">Vietnamese [Tiếng Việt]</a></li><br></ul></div>
   <h3><a name='arabic'>Arabic [العربية]</a></h3>
    <ul><table>
@@ -519,6 +520,12 @@
       <td><a name="yue0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/yue/0089_同植物講嘢嘅卡麗_slides.html" target="_blank">同植物講嘢嘅卡麗</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0093</td>
       <td><a href="/stories/yue/0093_心肝椗_slides.html" target="_blank">心肝椗</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -529,6 +536,12 @@
       <td><a href="/stories/yue/0095_贊瑪好勁_slides.html" target="_blank">贊瑪好勁！</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/yue/0111_點解河馬冇毛_slides.html" target="_blank">點解河馬冇毛</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -591,6 +604,12 @@
       <td><a name="yue0206"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="/stories/yue/0210_丁支同班牛_slides.html" target="_blank">丁支同班牛</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0215</td>
       <td><a href="/stories/yue/0215_早餐_slides.html" target="_blank">早餐</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -607,6 +626,12 @@
       <td><a href="/stories/yue/0234_球星安迪斯瓦_slides.html" target="_blank">球星安迪斯瓦</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0243</td>
+      <td><a href="/stories/yue/0243_同嫲嫲一齊過暑假_slides.html" target="_blank">同嫲嫲一齊過暑假</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -3132,6 +3157,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0008</td>
+      <td><a href="/stories/ru/0008_что-ты-делаешь_slides.html" target="_blank">Что ты делаешь?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/ru/0253_моя-книжка-с-картинками_slides.html" target="_blank">Моя книжка с картинками</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3918,6 +3949,27 @@
 </table>
 
    </ul>
+  <h3><a name='ukrainian'>Ukrainian [Українська]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/uk/0008_що-ти-робиш_slides.html" target="_blank">Що ти робиш?</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="uk0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='vietnamese'>Vietnamese [Tiếng Việt]</a></h3>
    <ul><table>
   <thead>
@@ -3991,7 +4043,7 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#tl0008">tl</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#uk0008">uk</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
@@ -4123,7 +4175,7 @@
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -4159,7 +4211,7 @@
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -4309,7 +4361,7 @@
       <td>0210</td>
       <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#tl0210">tl</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#tl0210">tl</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -4357,7 +4409,7 @@
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
