--- a/stories/yue/0004_山羊、野狗、同水牛.html
+++ b/stories/yue/0004_山羊、野狗、同水牛.html
@@ -49,14 +49,14 @@ Fabian Wakholi<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p>山羊、野狗、同水牛係好朋友嚟0架。有日，佢哋一齊去坐的士。</p>
+<p>山羊、野狗、同水牛係好朋友嚟㗎。有日，佢哋一齊去坐的士。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
 
-<p>當佢哋到咗目的地0既時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
+<p>當佢哋到咗目的地嘅時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
