--- a/stories/yue/0111_點解河馬冇毛_slides.html
+++ b/stories/yue/0111_點解河馬冇毛_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>山羊、野狗、同水牛 - Global African Storybook</title>
+  <title>點解河馬冇毛 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="山羊野狗同水牛" class="slide level1">
-<h1>山羊、野狗、同水牛</h1>
+<section id="點解河馬冇毛" class="slide level1">
+<h1>點解河馬冇毛</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>山羊、野狗、同水牛係好朋友嚟㗎。有日，佢哋一齊去坐的士。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
+<p>有一日，兔仔喺河邊散吓步。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>當佢哋到咗目的地嘅時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
+<p>河馬咁啱都喺度，一路行行吓，一路搵啲好味嘅野草嚟食。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>野狗冇帶散紙，所以佢就畀多咗少少。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
+<p>河馬冇見到兔仔，一唔小心就踩親兔仔隻腳。兔仔鬧住河馬大嗌：“衰河馬！你冇見到你踩親我隻腳咩？”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>司機正要畀野狗找數，估唔到山羊冇畀錢就走甩咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
+<p>河馬急住同兔仔道歉：“真係唔好意思，老友！我冇見到你！請原諒我！”兔仔邊處會聽河馬嘅解釋，佢激奀晒，大鬧河馬：“你肯定係有心踩親我㗎！總有一日你會受到懲罰！”</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>司機好嬲，結果佢冇畀野狗找數就開走咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
+<p>兔仔去搵到火，佢對火就話：“趁河馬出水嚟食草嘅時候，向佢放把火啦。佢竟夠膽踩我隻腳。”火回答佢話：“冇問題，老友記！我即刻去照你講嘅噉樣做。”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>所以，而家呢你可以見到野狗佢見到有車嚟就搏晒命追埋去，因為佢想叫司機畀佢找數。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
+<p>過咗陣，河馬正喺離河岸好遠嘅地方食草。呼嘅一聲，火突然間燒咗起上嚟，燒到河馬身上。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>山羊呢，聽親有車嚟就嚇到趕快逃走，因為佢驚冇交車飛就會畀人捉咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
+<p>河馬大嗌住，急住向河邊走去，但係佢嘅毛已經全部燒咗晒。河馬好傷心噉話：“我嘅毛全部被火燒咗晒！你燒晒我嘅毛！佢全都唔見咗！我好靚嘅毛！”</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>但係水牛聽到有車嚟一啲都唔會急。佢好定當噉過馬路，因為佢知道佢已經交好晒車飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
+<p>河馬嘅毛燒咗，兔仔就好合皮。然之後直到今日，河馬都唔敢離河岸太遠，因為佢驚又要被火燒啦。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="山羊野狗同水牛-1">山羊、野狗、同水牛</h2>
-<strong>文:</strong> Fabian Wakholi<br> <strong>圖:</strong> Marleen Visser<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<h2 id="點解河馬冇毛-1">點解河馬冇毛</h2>
+<strong>文:</strong> Basilio Gimo, David Ker<br> <strong>圖:</strong> Carol Liddiment<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/goat-dog-and-cow'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
