--- a/stories/zh/0111_为什么河马没有毛发_slides.html
+++ b/stories/zh/0111_为什么河马没有毛发_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>这就是为什么河马从来不会离河岸太远，因为她害怕再次被火烧。兔子高兴坏了，因为他报了仇。</p>
+<p>兔子终于报了仇，他高兴坏了；直到现在，河马也不敢离河岸太远，因为她害怕又要被火烧。</p>
 <center>
 <strong>8</strong>
 </center>
