--- a/stories/yue/0089_同植物講嘢嘅卡麗_slides.html
+++ b/stories/yue/0089_同植物講嘢嘅卡麗_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>山羊、野狗、同水牛 - Global African Storybook</title>
+  <title>同植物講嘢嘅卡麗 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="山羊野狗同水牛" class="slide level1">
-<h1>山羊、野狗、同水牛</h1>
+<section id="同植物講嘢嘅卡麗" class="slide level1">
+<h1>同植物講嘢嘅卡麗</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>山羊、野狗、同水牛係好朋友嚟㗎。有日，佢哋一齊去坐的士。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
+<p>呢個係卡麗。佢今年七歲。喺肯尼亞嘅當地方言入便，呢個名係“好人”嘅意思。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>當佢哋到咗目的地嘅時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
+<p>卡麗朝頭早醒翻，同橙樹話：“橙樹呀橙樹，快高長大啦，俾我哋結好多又大又甜嘅橙仔！”</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>野狗冇帶散紙，所以佢就畀多咗少少。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
+<p>喺卡麗行路翻學，路上佢就同草地講嘢話：“草地呀草地，你一定要生得綠茵茵嘅，唔好乾枯晒啦。”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>司機正要畀野狗找數，估唔到山羊冇畀錢就走甩咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
+<p>卡麗路過啲野花，佢就同野花講：“野花呀野花，你哋盡情噉開放啦，噉我可以夾住你哋喺我頭髮上。”</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>司機好嬲，結果佢冇畀野狗找數就開走咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
+<p>喺學校度，卡麗同操場中間嘅樹就話：“小樹呀小樹，快啲生出枝葉吖，噉我哋就可以喺樹蔭中讀書啦。”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>所以，而家呢你可以見到野狗佢見到有車嚟就搏晒命追埋去，因為佢想叫司機畀佢找數。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
+<p>卡麗仲同學校左近嘅灌木叢就話：“灌木呀灌木，你哋一定要生得壯壯嘅，噉衰人就唔入得嚟學校啦。”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>山羊呢，聽親有車嚟就嚇到趕快逃走，因為佢驚冇交車飛就會畀人捉咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
+<p>當卡麗由學校翻到屋企，佢又去睇吓橙樹，問佢話：“你結咗橙仔未呀？”</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>但係水牛聽到有車嚟一啲都唔會急。佢好定當噉過馬路，因為佢知道佢已經交好晒車飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
+<p>卡麗歎咗啖氣：“橙仔仲係綠色嘅，我聽日再嚟睇吓你啦！或者到咗聽日你就會俾我隻又大又甜嘅橙仔嘞。”</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="山羊野狗同水牛-1">山羊、野狗、同水牛</h2>
-<strong>文:</strong> Fabian Wakholi<br> <strong>圖:</strong> Marleen Visser<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<h2 id="同植物講嘢嘅卡麗-1">同植物講嘢嘅卡麗</h2>
+<strong>文:</strong> Ursula Nafula<br> <strong>圖:</strong> Jesse Pietersen<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/goat-dog-and-cow'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
