--- a/stories/yue/0111_點解河馬冇毛.html
+++ b/stories/yue/0111_點解河馬冇毛.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>为什么河马没有毛发</title>
+    <title>點解河馬冇毛</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,67 +43,67 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 
-<h1 id="section">为什么河马没有毛发</h1>
+<h1 id="section">點解河馬冇毛</h1>
 
-Basilio Gimo, David Ker<br>中文</div><div class="pagebreak">
+Basilio Gimo, David Ker<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
 
-<p>有一天，兔子在河边散步。</p>
+<p>有一日，兔仔喺河邊散吓步。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
 
-<p>河马也在那儿，一边闲逛，一边找些美味的野草来吃。</p>
+<p>河馬咁啱都喺度，一路行行吓，一路搵啲好味嘅野草嚟食。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
 
-<p>河马没有看见兔子，她不小心踩到了兔子的脚。兔子尖叫了一声，朝着河马大喊：“该死的河马！没看到你踩到我的脚了吗？”</p>
+<p>河馬冇見到兔仔，一唔小心就踩親兔仔隻腳。兔仔鬧住河馬大嗌：“衰河馬！你冇見到你踩親我隻腳咩？”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
 
-<p>河马赶紧给兔子道歉：“真不好意思，我的朋友！我没看见你！请原谅我！”兔子哪里会听河马的解释，他气极了，朝着河马大吼：“你肯定是故意的！总有一天你会受到惩罚！”</p>
+<p>河馬急住同兔仔道歉：“真係唔好意思，老友！我冇見到你！請原諒我！”兔仔邊處會聽河馬嘅解釋，佢激奀晒，大鬧河馬：“你肯定係有心踩親我㗎！總有一日你會受到懲罰！”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>兔子找到了火，他对火说：“趁河马从水里出来吃草的时候，朝她放一把火。她竟敢踩我的脚。”火回答说：“没问题，我的朋友！我这就按你说的做。”</p>
+<p>兔仔去搵到火，佢對火就話：“趁河馬出水嚟食草嘅時候，向佢放把火啦。佢竟夠膽踩我隻腳。”火回答佢話：“冇問題，老友記！我即刻去照你講嘅噉樣做。”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>过了一会儿，河马正在离河岸很远的地方吃草。呼的一声，火突然烧起来了，烧到了河马的身上。</p>
+<p>過咗陣，河馬正喺離河岸好遠嘅地方食草。呼嘅一聲，火突然間燒咗起上嚟，燒到河馬身上。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
 
-<p>河马尖叫着，赶紧跑向河边，但是她的毛发已经全部烧毁了。河马伤心地说：“我的毛都被火烧掉了！你烧了我的毛！它们全都不见了！我美丽的毛！”</p>
+<p>河馬大嗌住，急住向河邊走去，但係佢嘅毛已經全部燒咗晒。河馬好傷心噉話：“我嘅毛全部被火燒咗晒！你燒晒我嘅毛！佢全都唔見咗！我好靚嘅毛！”</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>兔子终于报了仇，他高兴坏了；直到现在，河马也不敢离河岸太远，因为她害怕又要被火烧。</p>
+<p>河馬嘅毛燒咗，兔仔就好合皮。然之後直到今日，河馬都唔敢離河岸太遠，因為佢驚又要被火燒啦。</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>作者:</strong> Basilio Gimo, David Ker<br /><strong>绘画:</strong> Carol Liddiment<br /><strong>翻译:</strong> Vicky Liu<br /><strong>语言:</strong> 中文</p>
+<p><strong>文:</strong> Basilio Gimo, David Ker<br /><strong>圖:</strong> Carol Liddiment<br /><strong>譯:</strong> dohliam<br /><strong>語言:</strong> 粵語</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
