--- a/stories/yue/0243_同嫲嫲一齊過暑假_slides.html
+++ b/stories/yue/0243_同嫲嫲一齊過暑假_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>山羊、野狗、同水牛 - Global African Storybook</title>
+  <title>同嫲嫲一齊過暑假 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="山羊野狗同水牛" class="slide level1">
-<h1>山羊、野狗、同水牛</h1>
+<section id="同嫲嫲一齊過暑假" class="slide level1">
+<h1>同嫲嫲一齊過暑假</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>山羊、野狗、同水牛係好朋友嚟㗎。有日，佢哋一齊去坐的士。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
+<p>奧東哥、阿皮尤同佢哋嘅爸爸一齊住喺城市度。佢哋非常之期待過暑假，因為嗰個時候佢哋唔使翻學，同埋佢哋仲可以去探嫲嫲。佢哋嘅嫲嫲住喺一條靠近好大片湖水嘅漁村度。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>當佢哋到咗目的地嘅時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
+<p>奧東哥同阿皮尤又要去探嫲嫲啦，佢哋非常之開心。前一晚，佢哋執好自己嘅行李，準備去漁村嘅旅程。佢哋嗰晚都瞓唔著，成晚都喺度討論呢個暑假。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>野狗冇帶散紙，所以佢就畀多咗少少。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
+<p>第二日凌晨，佢哋坐住爸爸嘅車前往條漁村。佢哋路上開過高山，又見到好多野生動物，仲經過幾個茶園添。佢哋唱住歌計住路上車輛過時間。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>司機正要畀野狗找數，估唔到山羊冇畀錢就走甩咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
+<p>過咗一排，細蚊仔都癐晒，就喺車度瞓著咗。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>司機好嬲，結果佢冇畀野狗找數就開走咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
+<p>當佢哋到達條漁村嘅時候，爸爸將奧東哥同阿皮尤叫醒咗。佢哋發現佢哋嘅嫲嫲——尼亞·琴亞達——喺樹蔭度鋪咗塊薦，正坐喺度唞緊。喺當地嘅語言入便，呢個名字嘅意思係“琴亞達人民個女”。佢係一個堅強兼美麗嘅女人。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>所以，而家呢你可以見到野狗佢見到有車嚟就搏晒命追埋去，因為佢想叫司機畀佢找數。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
+<p>尼亞·琴亞達歡迎佢哋嚟到自己嘅屋企，同佢哋一齊好快樂噉唱歌跳舞。佢兩孫仔亦都好高興噉將佢哋由城市買翻嚟嘅禮物送俾佢。奧東哥同阿皮尤爭住要嫲嫲打開自己嘅禮物先。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>山羊呢，聽親有車嚟就嚇到趕快逃走，因為佢驚冇交車飛就會畀人捉咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
+<p>尼亞·琴亞達打開咗禮物之後，用傳統嘅習俗敢祝福咗佢兩個孫仔。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>但係水牛聽到有車嚟一啲都唔會急。佢好定當噉過馬路，因為佢知道佢已經交好晒車飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
+<p>奧東哥同阿皮尤走出去玩吓。佢哋喺外便追住蝴蝶同雀仔。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,120 @@
 </section>
 <section class="slide level1">
 
-<h2 id="山羊野狗同水牛-1">山羊、野狗、同水牛</h2>
-<strong>文:</strong> Fabian Wakholi<br> <strong>圖:</strong> Marleen Visser<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
+<p>佢哋仲爬樹，跳入湖水，瀄起咗好多水花。</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
+<p>天黑咗之後，佢哋翻到嫲嫲屋企度食晚飯，但佢哋太癐嘞，仲未食完，就瞓著咗。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
+<p>第二日，爸爸開車翻城市，兩個細蚊仔就留俾嫲嫲照顧。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
+<p>奧東哥同阿皮尤幫手嫲嫲做家頭細務。佢哋幫嫲嫲打水，攞柴。佢哋仲幫嫲嫲由雞竇入便攞翻啲雞蛋，同埋喺花園度摘蔬菜。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
+<p>尼亞·琴亞達教佢哋煮烏咖喱粟米粥，仲教佢哋點做同燒魚一齊食嘅椰子飯。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
+<p>一日朝頭早，奧東哥幫嫲嫲去到牧場放牛，但係班牛就跑到咗隔籬農場度，農夫好嬲，就威脅咗奧東哥話，要沒收呢啲牛賠翻食咗嘅莊稼。由嗰日之後，奧東哥好小心，唔想再俾呢啲牛攪出事喇。</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
+<p>有一日，細蚊仔同尼亞·琴亞達一齊去集市度。嫲嫲有一個賣蔬菜、砂糖同番梘嘅檔位。阿皮尤好鍾意俾客仔報價，奧東哥就負責幫客仔打包。</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
+<p>大家收咗工之後，佢哋坐喺一齊飲奶茶，幫嫲嫲計吓今日賺到嘅錢。</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
+<p>但係假期好快就結束啦，細蚊仔要翻城市嘞。尼亞·琴亞達送咗頂帽仔俾奧東哥，送件冷衫俾阿皮尤。佢幫細蚊仔包咗啲嘢俾佢哋喺路上食。</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
+<p>當爸爸嚟接佢哋嘅時候，佢哋一啲都唔想走。細蚊仔噅住要尼亞·琴亞達同佢哋一齊翻去城市。但係佢笑住話：“我太老啦，唔適合住喺大城市度。我就喺呢條村度等你哋，等你哋下次再嚟啦。”</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
+<p>奧東哥同阿皮尤緊緊敢就抱住佢，同佢講拜拜。</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
+<p>當奧東哥同阿皮尤翻到學校時，佢哋將條村度嘅生活呢單嘢講咗俾班同學聽。有啲人覺得城市嘅生活好唔錯，另外仲有啲人覺得鄉下嘅生活更加好。最緊要嘅係，每個人都相信奧東哥同阿皮尤嘅嫲嫲真係好勁呀！</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="同嫲嫲一齊過暑假-1">同嫲嫲一齊過暑假</h2>
+<strong>文:</strong> Violet Otieno<br> <strong>圖:</strong> Catherine Groenewald<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/goat-dog-and-cow'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/holidays-grandmother'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
