--- a/stories/index.html
+++ b/stories/index.html
@@ -3163,10 +3163,22 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/ru/0001_очень-высокий-человек_slides.html" target="_blank">Очень высокий человек</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/ru/0008_что-ты-делаешь_slides.html" target="_blank">Что ты делаешь?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ru0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0127</td>
+      <td><a href="/stories/ru/0127_разные-игры_slides.html" target="_blank">Разные игры</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0253</td>
@@ -3972,6 +3984,12 @@
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="uk0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0253</td>
+      <td><a href="/stories/uk/0253_моя-книжка-з-картинками_slides.html" target="_blank">Моя книжка з картинками</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="uk0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -4013,7 +4031,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -4259,7 +4277,7 @@
       <td>0127</td>
       <td><a href="http://africanstorybook.org/stories/different-plays">Different Plays</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#fa0127">fa</a>, <a href="#gu0127">gu</a>, <a href="#ja0127">ja</a>, <a href="#nn0127">nn</a>, <a href="#no0127">no</a>, <a href="#tl0127">tl</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
+      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#fa0127">fa</a>, <a href="#gu0127">gu</a>, <a href="#ja0127">ja</a>, <a href="#nn0127">nn</a>, <a href="#no0127">no</a>, <a href="#ru0127">ru</a>, <a href="#tl0127">tl</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
     </tr>
     <tr>
       <td>0129</td>
@@ -4427,7 +4445,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#de0253">de</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ko0253">ko</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#de0253">de</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ko0253">ko</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#uk0253">uk</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0262</td>
